# TrainBookingSystem

./: .gitignore  README.md  main.py  pyproject.toml  schema.sql  train_booking.db
.github/: copilot-instructions.md
.github/workflows/: ci.yml
cli/: admin.py  dashboard.py  menu.py  passenger.py
database/: connection.py  queries.py  train_booking.db
services/: booking.py  payments.py  schedule.py  session.py  station.py  ticket_pdf.py  train.py  user.py
tests/: conftest.py  test_cli_admin.py  test_cli_schedule.py  test_integration.py  test_passenger_service.py  test_schedule_service.py  test_sessions.py  test_signin_and_dashboards.py  test_train_service.py  test_user_service.py
ui/: messages.py
utils/: __helper.py  payment_validators.py  security.py  validators.py
