[project]
name = "train-booking-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pysqlite3>=0.6.0",
    "pytest>=9.0.2",
    "questionary>=2.1.1",
    "rich>=14.3.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
